[package]
name = "liquidfun"
version = "0.3.0"
authors = ["Richard Janicek <r@janicek.co>"]
description = "Rust bindings for LiquidFun https://github.com/google/liquidfun"
license = "MIT"
repository = "https://github.com/rjanicek/liquidfun-rust"
documentation = "http://google.github.io/liquidfun/Programmers-Guide/html/index.html"
readme = "README.md"
keywords = ["liquidfun", "box2d", "physics", "particle", "fluid"]
build = "src/build.rs"

[build-dependencies]
gcc = "0.3"

[dependencies]
libc = "0.2"