[package]
name = "liquidfun"
version = "0.6.0"
authors = ["Richard Janicek <r@janicek.co>"]
description = "Rust bindings for LiquidFun https://github.com/google/liquidfun"
license = "MIT"
repository = "https://github.com/rjanicek/liquidfun-rust"
documentation = "http://rjanicek.github.io/liquidfun-rust/liquidfun/"
readme = "README.md"
keywords = ["liquidfun", "box2d", "particle", "physics", "game"]
build = "src/build.rs"

[build-dependencies]
gcc = "0.3"

[dependencies]
bitflags = "0.3"
libc = "0.2"